app/assets/stylesheets/global.css.scss
@import "style_guide";

* {
	box-sizing: border-box;
}

header {
	position: fixed;
	background-color: #ffffff;
	top: 0;
	width: 100%;
	height: 100px;
	border: 1px solid black;
	display: inline-block;
	text-align: center;
	text-decoration: none;
	font-size: 3em;
	color: pink;
		a {
			color: pink;
			text-decoration: none;
			font-size: 24px;
			text-align: right;
		}

		a:hover {
			text-decoration: none;
			color: pink;
		}

		img {
			width: 15%;
			float: left;
			margin-top: 10px;
			margin-left: 20px;
		}
}

.container {
	width: 100%;
	border: 1px solid black;
	margin-top: 100px;
	padding-left: .01px;
	padding-right: .01px;
}

h1 {
	color: white;
	margin: 0px;
}

nav {
	float: right;
	margin-right: 40px;
	margin-top: 10px;
		a {
			color: #d34e70;
		}
}

